ExcludeAssets 이 없으면, 어떻게 되는지도 테스트!

--- a/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
+++ b/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
@@ -14,10 +14,11 @@
     <PackageReference Include="Microsoft.Build.Utilities.Core" ExcludeAssets="runtime"/>
   </ItemGroup>
 
-<!-- 
-  <ItemGroup Condition="$([MSBuild]::GetTargetFrameworkIdentifier('$(TargetFramework)')) == '.NETFramework'">
-    <PackageReference Include="NETStandard.Library" />
+  <ItemGroup Condition="$(_Test) == 'true'">
+    <PackageReference Update="Microsoft.Build.Utilities.Core" ExcludeAssets=""/>
   </ItemGroup>
- -->
+  <PropertyGroup Condition="$(_Test) == 'true'">
+    <ArtifactsPivots>$(ArtifactsPivots)_MyCustomPivot_$(TargetFramework)</ArtifactsPivots>
+  </PropertyGroup>
 
 </Project>
