--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.8.43" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0')) == 'true'" />
     <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="15.9.20" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0')) != 'true'" />
+    <PackageVersion Include="FSharp.Core" Version="10.0.100" />
   </ItemGroup>
 </Project>
