이제 '테스트용 런타임'도 만들어야지 - 이건 C#으로 - global.json 에 테스트 플랫폼 설정이 자동으로 추가되었네?

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <RepoRootPath>$(MSBuildThisFileDirectory)</RepoRootPath>
     <UseArtifactsOutput>true</UseArtifactsOutput>
-    <ArtifactsPath>$(RepoRootPath)artifacts</ArtifactsPath>
+    <ArtifactsPath>$(RepoRootPath)artifacts/</ArtifactsPath>
+    <SrcRootPath>$(RepoRootPath)src/</SrcRootPath>
+    <TestRootPath>$(SrcRootPath)test/</TestRootPath>
   </PropertyGroup>
 </Project>
