--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -9,5 +9,6 @@
     <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.8.43" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0')) == 'true'" />
     <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="15.9.20" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0')) != 'true'" />
     <PackageVersion Include="FSharp.Core" Version="10.0.102" />
+    <PackageVersion Include="xunit.v3.mtp-v2" Version="3.2.2" />
   </ItemGroup>
 </Project>
