--- a/src/Nemonuri.RepoTools.TestRuntime/Nemonuri.RepoTools.TestRuntime.csproj
+++ b/src/Nemonuri.RepoTools.TestRuntime/Nemonuri.RepoTools.TestRuntime.csproj
@@ -1,10 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net8.0;netstandard2.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>14</LangVersion>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Polyfill" GeneratePathProperty="true">
+      <PrivateAssets>all</PrivateAssets>
+      <ExcludeAssets>build</ExcludeAssets>
+      <IncludeAssets>contentfiles</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="CommunityToolkit.Diagnostics" />
+  </ItemGroup>
 
 </Project>
