--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,16 +1,30 @@
-<Project>
+<Project TreatAsLocalProperty="__MSBuildPackageVersion">
 
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <CentralPackageTransitivePinningEnabled>false</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
+  
+  <Choose>
+    <When Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0'))">
+      <PropertyGroup>
+        <__MSBuildPackageVersion>17.8.43</__MSBuildPackageVersion>
+      </PropertyGroup>
+    </When>
+    <Otherwise>
+      <PropertyGroup>
+        <__MSBuildPackageVersion>15.9.20</__MSBuildPackageVersion>
+      </PropertyGroup>
+    </Otherwise>
+  </Choose>
 
   <ItemGroup>
-    <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.8.43" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0')) == 'true'" />
-    <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="15.9.20" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0')) != 'true'" />
+    <PackageVersion Include="Microsoft.Build.Framework" Version="$(__MSBuildPackageVersion)" />
+    <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="$(__MSBuildPackageVersion)" />
     <PackageVersion Include="FSharp.Core" Version="10.0.102" />
     <PackageVersion Include="xunit.v3.mtp-v2" Version="3.2.2" />
     <PackageVersion Include="Polyfill" Version="9.7.3" />
     <PackageVersion Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
+    <PackageVersion Include="Moq" Version="4.20.72" />
   </ItemGroup>
 </Project>
