생각해보니, MSBuild 를 굳이 테스트용 폴더에 설치할 필요 있어? - 뭔가 혼동이 온 듯;;

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,5 +6,6 @@
     <ArtifactsPath>$(RepoRootPath)artifacts/</ArtifactsPath>
     <SrcRootPath>$(RepoRootPath)src/</SrcRootPath>
     <TestRootPath>$(SrcRootPath)test/</TestRootPath>
+    <TestPackageRootPath>$(ArtifactsPath)test-package/</TestPackageRootPath>
   </PropertyGroup>
 </Project>
