NativeAot Publish 로 생성된 실행 파일 경로 찾기 - 추가

--- a/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
+++ b/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
@@ -6,6 +6,7 @@
     <RootNamespace>Nemonuri.RepoTools.FStar.BuildTasks.Tests</RootNamespace>
     <TargetFramework>net8.0</TargetFramework>
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+    <MockFStarExeRootPath>$(ArtifactsPath)mock-fstar-exe</MockFStarExeRootPath>
   </PropertyGroup>
 
   <ItemGroup>
