이제 테스트를 실행하려면, MockEngine 이 필요해!

--- a/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
+++ b/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
@@ -14,11 +14,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="UnitTest1.fs" />
+    <Compile Include="GeneratePrivateFStarConfigJsonTest.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="xunit.v3.mtp-v2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyMetadata Include="RealFStarExePath" Value="$(RealFStarExePath)" Condition="Exists('$(RealFStarExePath)')" />
+    <AssemblyMetadata Include="RealFStarExePath" Value="" Condition="!Exists('$(RealFStarExePath)')" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Nemonuri.RepoTools.FStar.BuildTasks\Nemonuri.RepoTools.FStar.BuildTasks.fsproj" />
   </ItemGroup>
 
 </Project>
