--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -27,5 +27,6 @@
     <PackageVersion Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="MSBuild.ProjectCreation" Version="17.0.1" />
+    <PackageVersion Include="ThisAssembly.Constants" Version="2.1.2" />
   </ItemGroup>
 </Project>
