Default 엔진은 에러가 나 버리네... - 음...그리고 MSBuild Task Test 를 위한 패키지에서, MSBuild 관련 dll 을 지울 필요 있나? - Task 로 실제 빌드할 때 지우면 되잖아.

--- a/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
+++ b/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="xunit.v3.mtp-v2" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Nemonuri.RepoTools.FStar.BuildTasks\Nemonuri.RepoTools.FStar.BuildTasks.fsproj" />
+    <ProjectReference Include="..\..\Nemonuri.RepoTools.TestRuntime\Nemonuri.RepoTools.TestRuntime.csproj" />
   </ItemGroup>
 
 </Project>
