F# 은, Private 로 된 다른 프로젝트의 Asset 도 참조 못 하는거야...??

--- a/src/Nemonuri.RepoTools.TestRuntime/Nemonuri.RepoTools.TestRuntime.csproj
+++ b/src/Nemonuri.RepoTools.TestRuntime/Nemonuri.RepoTools.TestRuntime.csproj
@@ -16,9 +16,7 @@
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Diagnostics" />
     <PackageReference Include="Moq" />
-    <PackageReference Include="Microsoft.Build.Framework">
-      <ExcludeAssets>runtime</ExcludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.Build.Framework" />
   </ItemGroup>
 
 </Project>
