--- a/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
+++ b/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
@@ -13,7 +13,10 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Core" />
-    <PackageReference Include="Microsoft.Build.Utilities.Core" ExcludeAssets="runtime" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core">
+      <PrivateAssets Condition="$(Configuration) == 'Release'">all</PrivateAssets>
+      <ExcludeAssets Condition="$(Configuration) == 'Release'">runtime</ExcludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
