'Publishing' 하는 효과를 내려면, 전역 속성에 NuGetInteractive=true;_IsPublishing=true 를 추가해 주어야 하는구나;;

--- a/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
+++ b/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
     
     <MSBuild Projects="$(MSBuildThisFileFullPath)"
-      Properties="Configuration=Release;CompileList=%(ToCompile.Identity).cs;AssemblyName=%(ToCompile.Identity)"
+      Properties="Configuration=Release;CompileList=%(ToCompile.Identity).cs;AssemblyName=%(ToCompile.Identity);NuGetInteractive=true;_IsPublishing=true"
       Targets="Restore;Publish">
     </MSBuild>
 
