'Item Transtrom' 식 안에는, Item 이름을 적으면 안 되는구나 - 그리고, Output 은 반드시 Input의 'Transform 식' 으로 표현되어야 하는구나!

--- a/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
+++ b/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
@@ -26,34 +26,29 @@
     <Compile Include="$(CompileList)" />
   </ItemGroup>
 
-  <Target Name="PreparePublishAll" >
+  <Target Name="PreparePublishAll" Outputs="@(ToCompile)">
     <ItemGroup>
-      <ToCompile Include="return0;return1;stderr-version;stdin;stdout-version" />
-      <ToCompile Update="@(ToCompile)">
-        <_FullPath>$(MSBuildThisFileDirectory)%(ToCompile.Identity).cs</_FullPath>
+      <ToCompileFileName Include="return0;return1;stderr-version;stdin;stdout-version" />
+      <ToCompile
+        Include="@(ToCompileFileName->'$(MSBuildThisFileDirectory)%(Identity).cs')">
       </ToCompile>
     </ItemGroup>
   </Target>
-  
+
   <!-- 
   - MSBuild incremental builds for new or stale targets
     - https://learn.microsoft.com/en-us/visualstudio/msbuild/how-to-build-incrementally
     - 'Inputs', 'Outputs' should be file path, to use incremental builds.
   -->
   <Target Name="PublishAll"
-    Inputs="$(MSBuildThisFileFullPath);@(ToCompile->'%(_FullPath)')"
-    Outputs="@(MockFStarExe)"
+    Inputs="$(MSBuildThisFileFullPath);@(ToCompile)"
+    Outputs="@(ToCompile->'$(MSBuildProjectDirectory)/$(OutputPath)/native/%(FileName)$(_NativeExecutableExtension)')"
     DependsOnTargets="PreparePublishAll">
     
     <MSBuild Projects="$(MSBuildThisFileFullPath)"
-      Properties="Configuration=Release;CompileList=%(ToCompile.Identity).cs;AssemblyName=%(ToCompile.Identity);NuGetInteractive=true;_IsPublishing=true"
+      Properties="Configuration=Release;CompileList=%(ToCompile.Identity);AssemblyName=%(ToCompile.FileName);NuGetInteractive=true;_IsPublishing=true"
       Targets="Restore;Publish">
     </MSBuild>
-
-    <!-- Native Aot 로 생성된 파일들 경로 얻기 -->
-    <ItemGroup>
-      <MockFStarExe Include="$(MSBuildProjectDirectory)/$(OutputPath)/native/*$(_NativeExecutableExtension)" />
-    </ItemGroup>
     
   </Target>
 
