file-based app 을 실행할 땐, 동일 또는 상위 폴더에 sdk 를 import 하는 .proj 가 있으면 안 되는구나;;

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,5 +7,6 @@
     <SrcRootPath>$(RepoRootPath)src/</SrcRootPath>
     <TestRootPath>$(SrcRootPath)test/</TestRootPath>
     <TestPackageRootPath>$(ArtifactsPath)test-package/</TestPackageRootPath>
+    <TestArtifactsPath>$(ArtifactsPath)test/</TestArtifactsPath>
   </PropertyGroup>
 </Project>
