WorkingDirectory 를 ToolRootPath 와 똑같게 설정해야, 기대했던 효과를 볼 수 있구나...

--- a/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
+++ b/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
@@ -31,4 +31,16 @@
     <ProjectReference Include="..\..\Nemonuri.RepoTools.TestRuntime\Nemonuri.RepoTools.TestRuntime.csproj" />
   </ItemGroup>
 
+  <Target Name="GenerateMockFStarExePathes" BeforeTargets="BeforeCompile">
+    <MSBuild Projects="$(RepoRootPath)Tool.proj"
+      Targets="GenerateMockFStarExe">
+      
+      <Output TaskParameter="TargetOutputs" ItemName="MockFStarExe" />
+    </MSBuild>
+    
+    <ItemGroup>
+      <AssemblyMetadata Include="MockFStarExePath" Value="%(MockFStarExe.Identity)" />
+    </ItemGroup>
+  </Target>
+
 </Project>
