$(DesignTimeBuild) != 'true' 조건을 걸어줘야, IDE 에서 문제가 안 생긴다!

--- a/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
+++ b/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
@@ -31,7 +31,8 @@
     <ProjectReference Include="..\..\Nemonuri.RepoTools.TestRuntime\Nemonuri.RepoTools.TestRuntime.csproj" />
   </ItemGroup>
 
-  <Target Name="GenerateMockFStarExePathes" BeforeTargets="BeforeCompile">
+  <Target Name="GenerateMockFStarExePathes" BeforeTargets="BeforeCompile" 
+    Condition="$(DesignTimeBuild) != 'true'">
     <MSBuild Projects="$(RepoRootPath)Tool.proj"
       Targets="GenerateMockFStarExe">
       
