PublishAll 도 'Release' 환경에서 실행시켜야 하는구나... - 그리고 뒤에 'fstar' postfix 도 붙이자

--- a/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
+++ b/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
@@ -29,7 +29,8 @@
   
   <Target Name="PrepareForPublishAll" >
     <ItemGroup>
-      <ToCompileFileName Include="return0;return1;stderr-version;stdin;stdout-version" />
+      <ToCompileFileName
+        Include="return0;return1;stderr-version;stdin;stdout0-version;stdout1-version" />
       <ToCompile
         Include="@(ToCompileFileName->'$(MSBuildThisFileDirectory)%(Identity).cs')">
       </ToCompile>
