Outputs 을 고쳤으면, 그에 맞는 property 도 고쳐야지.... - 와, 테스트 성공!

--- a/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
+++ b/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
@@ -49,11 +49,11 @@
   -->
   <Target Name="PublishAll"
     Inputs="$(MSBuildThisFileFullPath);@(ToCompile)"
-    Outputs="@(ToCompile->'$(OutputPath)/native/%(FileName)$(_NativeExecutableExtension)')"
+    Outputs="@(ToCompile->'$(OutputPath)/native/%(FileName).fstar$(_NativeExecutableExtension)')"
     DependsOnTargets="PrepareForPublishAll">
     
     <MSBuild Projects="$(MSBuildThisFileFullPath)"
-      Properties="Configuration=Release;CompileList=%(ToCompile.FullPath);AssemblyName=%(ToCompile.FileName);NuGetInteractive=true;_IsPublishing=true"
+      Properties="Configuration=Release;CompileList=%(ToCompile.FullPath);AssemblyName=%(ToCompile.FileName).fstar;NuGetInteractive=true;_IsPublishing=true"
       Targets="Restore;Publish">
     </MSBuild>
     
