--- a/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
+++ b/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
@@ -44,4 +44,10 @@
     </ItemGroup>
   </Target>
 
+  <Target Name="_ComputeRunArguments" BeforeTargets="ComputeRunArguments">
+    <PropertyGroup>
+      <RunArguments>$(RunArguments) -ctrf $(MSBuildProjectFile).$([System.DateTime]::Now.Ticks).log</RunArguments>
+    </PropertyGroup>
+  </Target>
+
 </Project>
