...뭐지? stdin_readline 에서 완전히 막혀버리네?

--- a/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
+++ b/src/Nemonuri.RepoTools.FStar.MockFStarExeGenerator/Nemonuri.RepoTools.FStar.MockFStarExeGenerator.csproj
@@ -27,7 +27,7 @@
   <Target Name="PrepareForPublishAll" >
     <ItemGroup>
       <ToCompileFileName
-        Include="return0;return1;stderr-version;stdin;stdout0-version;stdout1-version;sleep1s-stdout0-version;sleep10s-stdout0-version" />
+        Include="return0;return1;stderr-version;stdin;stdin_readline;stdout0-version;stdout1-version;sleep1s-stdout0-version;sleep10s-stdout0-version" />
       <ToCompile
         Include="@(ToCompileFileName->'$(MSBuildThisFileDirectory)%(Identity).cs')">
       </ToCompile>
