F#의 'type'은, Literal 멤버를 가질 수 없구나;;

--- a/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
+++ b/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
@@ -17,6 +17,8 @@
       <PrivateAssets Condition="$(Configuration) == 'Release'">all</PrivateAssets>
       <ExcludeAssets Condition="$(Configuration) == 'Release'">runtime</ExcludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Text.Json" 
+      Condition="!$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0'))" />
   </ItemGroup>
 
 </Project>
