--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -28,5 +28,6 @@
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="MSBuild.ProjectCreation" Version="17.0.1" />
     <PackageVersion Include="ThisAssembly.Constants" Version="2.1.2" />
+    <PackageVersion Include="System.Text.Json" Version="10.0.2" />
   </ItemGroup>
 </Project>
