--- a/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
+++ b/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
@@ -1,18 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
     <TargetFrameworks Condition="$([MSBuild]::IsOsPlatform('WINDOWS'))">$(TargetFrameworks);net462</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Theories.fs" />
     <Compile Include="FStarConfigJsonTheory.fs" />
     <Compile Include="FStarConfigJsonModel.fs" />
-    <Compile Include="GenerateFStarConfigJson.fs" /><Compile Include="EditGeneratedFStarConfigJson.fs" />
+    <Compile Include="MSBuildTheory.fs" />
+    <Compile Include="GenerateFStarConfigJson.fs" />
+    <Compile Include="EditGeneratedFStarConfigJson.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="FSharp.Core" />
     <PackageReference Include="Microsoft.Build.Utilities.Core">
@@ -21,5 +20,4 @@
     </PackageReference>
     <PackageReference Include="System.Text.Json" Condition="!$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0'))" />
   </ItemGroup>
-
 </Project>
