--- a/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
+++ b/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
@@ -7,30 +7,25 @@
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
     <TestingPlatformCommandLineArguments>$(TestingPlatformCommandLineArguments) --report-xunit-html </TestingPlatformCommandLineArguments>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="TestTheory.fs" />
     <Compile Include="GenerateFStarConfigJsonTest.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="xunit.v3.mtp-v2" />
   </ItemGroup>
-
   <ItemGroup>
     <AssemblyMetadata Include="RealFStarExePath" Value="$(RealFStarExePath)" Condition="Exists('$(RealFStarExePath)')" />
     <AssemblyMetadata Include="RealFStarExePath" Value="" Condition="!Exists('$(RealFStarExePath)')" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Nemonuri.RepoTools.FStar.BuildTasks\Nemonuri.RepoTools.FStar.BuildTasks.fsproj" />
     <ProjectReference Include="..\..\Nemonuri.RepoTools.TestRuntime\Nemonuri.RepoTools.TestRuntime.csproj" />
   </ItemGroup>
-
   <Target Name="GenerateMockFStarExePathes" BeforeTargets="BeforeCompile" Condition="$(DesignTimeBuild) != 'true'">
     <MSBuild Projects="$(RepoRootPath)Tool.proj" Targets="GenerateMockFStarExe">
       <Output TaskParameter="TargetOutputs" ItemName="MockFStarExe" />
@@ -39,7 +34,6 @@
       <AssemblyMetadata Include="MockFStarExePath" Value="%(MockFStarExe.Identity)" />
     </ItemGroup>
   </Target>
-
   <!-- 
   <Target Name="_ComputeRunArguments" BeforeTargets="ComputeRunArguments">
     <PropertyGroup>
@@ -47,5 +41,4 @@
     </PropertyGroup>
   </Target>
    -->
-
 </Project>
