--- a/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
+++ b/src/test/Nemonuri.RepoTools.FStar.BuildTasks.Tests/Nemonuri.RepoTools.FStar.BuildTasks.Tests.fsproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="TestTheory.fs" />
-    <Compile Include="GenerateFStarConfigJsonTest.fs" />
+    <Compile Include="GenerateFStarConfigJsonTest.fs" /><Compile Include="EditGeneratedFStarConfigJsonTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="xunit.v3.mtp-v2" />
