--- a/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
+++ b/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
@@ -6,10 +6,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Theories.fs" />
+    <Compile Include="FStarOptionTheory.fs" />
     <Compile Include="FStarConfigJsonTheory.fs" />
     <Compile Include="FStarConfigJsonModel.fs" />
     <Compile Include="MSBuildTheory.fs" />
     <Compile Include="GenerateFStarConfigJson.fs" />
+    <Compile Include="PartitionOptions.fs" />
     <Compile Include="EditGeneratedFStarConfigJson.fs" />
   </ItemGroup>
   <ItemGroup>
